# quarantine_chess_pgn_editor

./: Cargo.toml  README.md  README.odt
src/board/: ayuda.rs  botones_tablero.rs  cabecera.rs  clic_movim.rs  crea_movim.rs  crea_piezas.rs  dialog_engine.rs  editor_partida.rs  graba_pgn.rs  misc.rs  mod.rs  presenta_jugadas.rs  progreso_carga.rs  promocion.rs  tablero.rs  tablero_interno.rs  uci_interface.rs
src/board/ajedrez/: mod.rs
src/board/parser/: mod.rs
src/board/uci/: mod.rs
